--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,13 @@
     display: flex;
     flex-direction: row;
 }
+
+.button-container {
+    margin-left: 10%;
+  }
+  .button-container h1 {
+    font-family: "Poppins", sans-serif;
+    font-weight: 300;
+    font-size: 36px;
+    margin-bottom: 10%;
+  }
