--- a/src/components/Buttons/Buttons.css
+++ b/src/components/Buttons/Buttons.css
@@ -3,8 +3,9 @@ button {
   border-radius: 6px;
   border: none;
   font-weight: 500;
-  padding: 6px;
+  padding: 10px 15px;
   cursor: pointer;
+  margin-right: 150px;
 }
 
 .btn-head{
