--- a/src/components/Buttons/Buttons.css
+++ b/src/components/Buttons/Buttons.css
@@ -3,15 +3,19 @@ button {
   border-radius: 6px;
   border: none;
   font-weight: 500;
+  font-size: 15px;
   padding: 10px 15px;
   cursor: pointer;
   margin-right: 150px;
+  margin-bottom: 40px;
+  background-color: #E0E0E0;
+  color: #3F3F3F;
 }
 
 .btn-head{
-    color: #333333;
-    font-size: 12px;
+    color: #333;
+    font-size: 14px;
     font-weight: 400;
     font-family: 'Ubuntu Mono', monospace;
-    margin-bottom: 10%;
+    margin-bottom: 6%;
 }
