--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,8 @@
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     font-size: 36px;
-    margin-bottom: 10%;
+    margin-bottom: 3%;
+    margin-top: 5%;
   }
 
 
@@ -20,3 +21,4 @@
     flex-direction: row;
     border: 2px solid red;
   }
+
